Rollback label contrast fix

--- a/src/components/internal/Button/Button.scss
+++ b/src/components/internal/Button/Button.scss
@@ -62,14 +62,12 @@
 
         &:disabled {
             background-color: style.token(color-background-disabled);
-            color: style.token(color-label-secondary);
-            font-weight: 500;
+            color: style.token(color-label-disabled);
         }
 
         &.--loading {
             background: style.token(color-background-disabled);
-            color: style.token(color-label-secondary);
-            font-weight: 500;
+            color: style.token(color-label-disabled);
         }
     }
 
